@@ -9,6 +9,10 @@ New in CSSC-1.3.1-git, YYYY-MM-DD
           exits with status 1, not 0.  This fixes SourceForge bug
           #1300722.
 
+	* The headers produced by sccsdiff have changed.  A different
+          header is used when the -p option is specified and when
+          it's not.  The new behaviour matches OpenSolaris 2009.06.
+
 New in CSSC-1.3.0, 2010-11-07
 
         * This release is identical to CSSC-1.3.0rc1 apart from the
